--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,207 +1,206 @@
 .login {
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .login .div {
-    background-color: #ffffff;
-    height: 1024px;
-    position: relative;
-    width: 1440px;
-  }
-  
-  .login .text-wrapper {
-    color: #000000;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 36.7px;
-    font-weight: 400;
-    height: 95px;
-    left: 511px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 40px;
-    width: 413px;
-  }
-  
-  .login .login-box {
-    background-color: #eeeeee;
-    height: 673px;
-    left: 316px;
-    position: absolute;
-    top: 176px;
-    width: 808px;
-  }
-  
-  .login .login-form {
-    background-color: #ffffff;
-    height: 278px;
-    left: 13px;
-    position: absolute;
-    top: 69px;
-    width: 782px;
-  }
-  
-  .login .input-userid {
-    background-color: #eeeeee;
-    height: 90px;
-    left: 27px;
-    position: absolute;
-    top: 24px;
-    width: 728px;
-  }
-  
-  .login .text-wrapper-2 {
-    color: #000000;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 26.6px;
-    font-weight: 400;
-    height: 56px;
-    left: 106px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 15px;
-    width: 512px;
-  }
-  
-  .login .input-userpassword {
-    background-color: #eeeeee;
-    height: 90px;
-    left: 27px;
-    position: absolute;
-    top: 161px;
-    width: 728px;
-  }
-  
-  .login .login-button {
-    background-color: #ffffff;
-    height: 154px;
-    left: 10px;
-    position: absolute;
-    top: 366px;
-    width: 784px;
-  }
-  
-  .login .submit-button {
-    background-color: #eeeeee;
-    height: 90px;
-    left: 45px;
-    position: absolute;
-    top: 28px;
-    width: 270px;
-  }
-  
-  .login .text-wrapper-3 {
-    color: #000000;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 26.6px;
-    font-weight: 400;
-    height: 55px;
-    left: 65px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 16px;
-    width: 129px;
-  }
-  
-  .login .cancel-button {
-    background-color: #eeeeee;
-    height: 90px;
-    left: 492px;
-    position: absolute;
-    top: 28px;
-    width: 221px;
-  }
-  
-  .login .text-wrapper-4 {
-    color: #000000;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 26.6px;
-    font-weight: 400;
-    height: 55px;
-    left: 31px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 16px;
-    width: 163px;
-  }
-  
-  .login .etc {
-    background-color: #ffffff;
-    height: 54px;
-    left: 73px;
-    position: absolute;
-    top: 554px;
-    width: 658px;
-  }
-  
-  .login .text-wrapper-5 {
-    color: #000000;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 26.6px;
-    font-weight: 400;
-    height: 37px;
-    left: 58px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 10px;
-    width: 160px;
-  }
-
-  .login .etc ::after{
-    content: '';
-    display: block;
-    border-right: 1px solid #000000;
-    height: 100%;
-    position: absolute;
-    top : 0;
-    right: -20px;
-    border-collapse: collapse;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
 }
-.login .etc :last-of-type::after{
+
+.login .div {
+  background-color: #ffffff;
+  height: 1024px;
+  position: relative;
+  width: 1440px;
+}
+
+.login .textWrapper {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 36.7px;
+  font-weight: 400;
+  height: 95px;
+  left: 511px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 40px;
+  width: 413px;
+}
+
+.login .loginBox {
+  background-color: #eeeeee;
+  height: 673px;
+  left: 316px;
+  position: absolute;
+  top: 176px;
+  width: 808px;
+}
+
+.login .loginForm {
+  background-color: #ffffff;
+  height: 278px;
+  left: 13px;
+  position: absolute;
+  top: 69px;
+  width: 782px;
+}
+
+.login .inputUserid {
+  background-color: #eeeeee;
+  height: 90px;
+  left: 27px;
+  position: absolute;
+  top: 24px;
+  width: 728px;
+}
+
+.login .textWrapper2 {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 26.6px;
+  font-weight: 400;
+  height: 56px;
+  left: 106px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 15px;
+  width: 512px;
+}
+
+.login .inputUserpassword {
+  background-color: #eeeeee;
+  height: 90px;
+  left: 27px;
+  position: absolute;
+  top: 161px;
+  width: 728px;
+}
+
+.login .loginButton {
+  background-color: #ffffff;
+  height: 154px;
+  left: 10px;
+  position: absolute;
+  top: 366px;
+  width: 784px;
+}
+
+.login .submitButton {
+  background-color: #eeeeee;
+  height: 90px;
+  left: 45px;
+  position: absolute;
+  top: 28px;
+  width: 270px;
+}
+
+.login .textWrapper3 {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 26.6px;
+  font-weight: 400;
+  height: 55px;
+  left: 65px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 16px;
+  width: 129px;
+}
+
+.login .cancelButton {
+  background-color: #eeeeee;
+  height: 90px;
+  left: 492px;
+  position: absolute;
+  top: 28px;
+  width: 221px;
+}
+
+.login .textWrapper4 {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 26.6px;
+  font-weight: 400;
+  height: 55px;
+  left: 31px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 16px;
+  width: 163px;
+}
+
+.login .etc {
+  background-color: #ffffff;
+  height: 54px;
+  left: 73px;
+  position: absolute;
+  top: 554px;
+  width: 658px;
+}
+
+.login .textWrapper5 {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 26.6px;
+  font-weight: 400;
+  height: 37px;
+  left: 58px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 10px;
+  width: 160px;
+}
+
+.login .etc::after {
+  content: '';
+  display: block;
+  border-right: 1px solid #000000;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: -20px;
+  border-collapse: collapse;
+}
+
+.login .etc:last-of-type::after {
   border: 0;
 }
 
-  
-  
-  .login .text-wrapper-6 {
-    color: #000000;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 26.6px;
-    font-weight: 400;
-    height: 35px;
-    left: 250px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 10px;
-    width: 160px;
-  }
-  
-  .login .text-wrapper-7 {
-    color: #000000;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 26.6px;
-    font-weight: 400;
-    height: 37px;
-    left: 446px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 10px;
-    width: 160px;
-  }
+.login .textWrapper6 {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 26.6px;
+  font-weight: 400;
+  height: 35px;
+  left: 250px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 10px;
+  width: 160px;
+}
+
+.login .textWrapper7 {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 26.6px;
+  font-weight: 400;
+  height: 37px;
+  left: 446px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 10px;
+  width: 160px;
+}
