--- a/src/css/passwordCheck.css
+++ b/src/css/passwordCheck.css
@@ -1,137 +1,137 @@
-.password-check {
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .password-check .div {
-    background-color: #ffffff;
-    height: 1024px;
-    position: relative;
-    width: 1440px;
-  }
-  
-  .password-check .text-wrapper {
-    color: #000000;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 35.5px;
-    font-weight: 400;
-    height: 89px;
-    left: 506px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 47px;
-    width: 427px;
-  }
-  
-  .password-check .login-box {
-    background-color: #eeeeee;
-    height: 650px;
-    left: 226px;
-    position: absolute;
-    top: 169px;
-    width: 1000px;
-  }
-  
-  .password-check .button-box {
-    background-color: #ffffff;
-    height: 189px;
-    left: 12px;
-    position: absolute;
-    top: 447px;
-    width: 960px;
-  }
-  
-  .password-check .submit-button {
-    background-color: #eeeeee;
-    height: 110px;
-    left: 55px;
-    position: absolute;
-    top: 35px;
-    width: 330px;
-  }
-  
-  .password-check .text-wrapper-2 {
-    color: #000000;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 32.5px;
-    font-weight: 400;
-    height: 68px;
-    left: 79px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 20px;
-    width: 158px;
-  }
-  
-  .password-check .cancle-button {
-    background-color: #eeeeee;
-    height: 110px;
-    left: 602px;
-    position: absolute;
-    top: 35px;
-    width: 271px;
-  }
-  
-  .password-check .text-wrapper-3 {
-    color: #000000;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 32.5px;
-    font-weight: 400;
-    height: 68px;
-    left: 37px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 20px;
-    width: 200px;
-  }
-  
-  .password-check .inpurt-box {
-    background-color: #ffffff;
-    height: 341px;
-    left: 16px;
-    position: absolute;
-    top: 85px;
-    width: 957px;
-  }
-  
-  .password-check .input-userpassword {
-    background-color: #eeeeee;
-    height: 110px;
-    left: 33px;
-    position: absolute;
-    top: 43px;
-    width: 891px;
-  }
-  
-  .password-check .text-wrapper-4 {
-    color: #000000;
-    font-family: "Inter-Regular", Helvetica;
-    font-size: 32.5px;
-    font-weight: 400;
-    height: 69px;
-    left: 130px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 18px;
-    width: 626px;
-  }
-  
-  .password-check .div-wrapper {
-    background-color: #eeeeee;
-    height: 110px;
-    left: 33px;
-    position: absolute;
-    top: 197px;
-    width: 891px;
-  }
+.passwordCheck {
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+
+.passwordCheck .div {
+  background-color: #ffffff;
+  height: 1024px;
+  position: relative;
+  width: 1440px;
+}
+
+.passwordCheck .textWrapper {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 35.5px;
+  font-weight: 400;
+  height: 89px;
+  left: 506px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 47px;
+  width: 427px;
+}
+
+.passwordCheck .loginBox {
+  background-color: #eeeeee;
+  height: 650px;
+  left: 226px;
+  position: absolute;
+  top: 169px;
+  width: 1000px;
+}
+
+.passwordCheck .buttonBox {
+  background-color: #ffffff;
+  height: 189px;
+  left: 12px;
+  position: absolute;
+  top: 447px;
+  width: 960px;
+}
+
+.passwordCheck .submitButton {
+  background-color: #eeeeee;
+  height: 110px;
+  left: 55px;
+  position: absolute;
+  top: 35px;
+  width: 330px;
+}
+
+.passwordCheck .textWrapper2 {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 32.5px;
+  font-weight: 400;
+  height: 68px;
+  left: 79px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 20px;
+  width: 158px;
+}
+
+.passwordCheck .cancelButton {
+  background-color: #eeeeee;
+  height: 110px;
+  left: 602px;
+  position: absolute;
+  top: 35px;
+  width: 271px;
+}
+
+.passwordCheck .textWrapper3 {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 32.5px;
+  font-weight: 400;
+  height: 68px;
+  left: 37px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 20px;
+  width: 200px;
+}
+
+.passwordCheck .inputBox {
+  background-color: #ffffff;
+  height: 341px;
+  left: 16px;
+  position: absolute;
+  top: 85px;
+  width: 957px;
+}
+
+.passwordCheck .inputUserpassword {
+  background-color: #eeeeee;
+  height: 110px;
+  left: 33px;
+  position: absolute;
+  top: 43px;
+  width: 891px;
+}
+
+.passwordCheck .textWrapper4 {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 32.5px;
+  font-weight: 400;
+  height: 69px;
+  left: 130px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 18px;
+  width: 626px;
+}
+
+.passwordCheck .divWrapper {
+  background-color: #eeeeee;
+  height: 110px;
+  left: 33px;
+  position: absolute;
+  top: 197px;
+  width: 891px;
+}
