--- a/src/main.css
+++ b/src/main.css
@@ -17,7 +17,7 @@
   left: -110px;
   top: 0;
   width: 100vw;
-  height: 200px;
+  height: 600px;
   margin: 20px 0;
   background-color: #eeeeee;
 }
@@ -26,18 +26,27 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 300px;
+  flex-wrap: wrap;
+  margin-top: 700px;
+  padding: 20px;
 }
 
 .main-notlogin .product {
   background-color: #eeeeee;
+  width: 20%;
+  margin: 20px 10px;
 }
 
-.main-notlogin .image {
+.main-notlogin .productImg {
+  display: block;
+  width: 100%;
+  height: 200px;
   background-color: #ffffff;
 }
 
 .main-notlogin .text-wrapper {
+  width: 100%;
+  margin: 5px 0;
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 20px;
