--- a/src/css/paySuccess.css
+++ b/src/css/paySuccess.css
@@ -255,13 +255,24 @@
   width: 925px;
 }
 
-.paySuccess .divWrapper {
+.paySuccess .toHome {
   background-color: #eeeeee;
-  height: 97px;
-  left: 546px;
-  position: absolute;
-  top: 1338px;
-  width: 342px;
-  font-size: 44.4px;
+  font-size: 43px;
+  height: 80px;
+  left: 180px;
   text-align: center;
+  position: absolute;
+  top: 1230px;
+  width: 300px;
+}
+
+.paySuccess .nextPage {
+  background-color: #eeeeee;
+  font-size: 43px;
+  height: 80px;
+  left: 580px;
+  text-align: center;
+  position: absolute;
+  top: 1230px;
+  width: 300px;
 }
